<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="406dp"
        android:layout_height="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_background" />

    <ImageButton
        android:id="@+id/second_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow"
        style="?android:attr/buttonBarStyle"/>

    <ImageButton
        android:id="@+id/down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_down_arrow"
        style="?android:attr/buttonBarStyle"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="332dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/strat_casino"
                android:textColor="@color/black"
                android:textSize="24sp" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <RatingBar
                   android:id="@+id/ratingBar"
                   style="?android:attr/ratingBarStyleSmall"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginTop="13dp"
                   android:max="5"
                   android:numStars="5"
                   android:progressTint="@color/yellow"
                   android:rating="4.5"
                   android:stepSize="0.5" />

               <TextView
                   android:id="@+id/rating"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="3dp"
                   android:fontFamily="@font/open_sans_bold"
                   android:text="@string/_4_91"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   android:paddingTop="10dp"/>

               <TextView
                   android:id="@+id/customers"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="4dp"
                   android:fontFamily="@font/open_sans_light"
                   android:text="@string/_510"
                   android:textColor="@color/black"
                   android:textSize="15sp"/>
           </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textColor="@color/black_500"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/about_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:textColor="@color/black_500"
                android:fontFamily="@font/open_sans_regular"
                android:paddingStart="20dp"
                android:paddingBottom="20dp"/>

            <TextView
            android:id="@+id/venue_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/venue_type"
            android:fontFamily="@font/open_sans_semi_bold"
            android:textColor="@color/black_500"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:paddingBottom="10dp"/>
            <TextView
                android:id="@+id/venue_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue_text"
                android:textColor="@color/black_500"
                android:fontFamily="@font/open_sans_regular"
                android:paddingStart="20dp"
                android:paddingBottom="20dp"/>

            <TextView
                android:id="@+id/type_of_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_of_view"
                android:fontFamily="@font/open_sans_semi_bold"
                android:textColor="@color/black_500"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingBottom="10dp"/>
            <TextView
                android:id="@+id/type_of_view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_text"
                android:textColor="@color/black_500"
                android:fontFamily="@font/open_sans_regular"
                android:paddingStart="20dp"
                android:paddingBottom="20dp"/>

            <Button
                android:id="@+id/check_map"
                android:layout_width="361dp"
                android:layout_height="83dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_vertical|center"
                android:background="@drawable/custom_button"
                android:shadowColor="@color/blue"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/check_map"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:drawableEnd="@drawable/ic_steps"
                android:paddingEnd="50dp"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>