<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="25dp" />

    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/one"
        android:textColor="@color/black_500"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans_extra_bold"
        android:text="@string/two"
        android:textColor="@color/black_500"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/firstText"
        app:layout_constraintTop_toTopOf="@+id/firstText" />

    <TextView
        android:id="@+id/thirdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/three"
        android:textColor="@color/black_500"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/secondText"
        app:layout_constraintTop_toTopOf="@+id/secondText" />

    <TextView
        android:id="@+id/fourthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/fourth"
        android:textColor="@color/black_500"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/firstText" />

    <TextView
        android:id="@+id/fifthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans_extra_bold"
        android:text="@string/fifth"
        android:textColor="@color/black_500"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/fourthText"
        app:layout_constraintTop_toTopOf="@+id/fourthText" />

    <TextView
        android:id="@+id/sixthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans_extra_bold"
        android:text="@string/sixth"
        android:textColor="@color/black_500"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/fifthText"
        app:layout_constraintTop_toTopOf="@+id/fifthText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings"
        android:contentDescription="@string/settings" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_search_view"
        android:elevation="20dp"
        android:queryHint="@string/search_bar_hint"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/fourthText" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="wrap_content"
                android:layout_height="235dp"
                android:layout_marginTop="20dp"
                android:padding="30dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view_in_cardview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/image_one"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="116dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/open_sans_extra_bold"
                        android:text="@string/strat_casino"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/view_in_cardview" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="13dp"
                        android:max="5"
                        android:numStars="5"
                        android:progressTint="@color/yellow"
                        android:rating="4.5"
                        android:stepSize="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/_4_91"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/ratingBar"
                        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

                    <TextView
                        android:id="@+id/customers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/_510"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/rating"
                        app:layout_constraintTop_toTopOf="@+id/rating" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="wrap_content"
                android:layout_height="235dp"
                android:layout_marginTop="20dp"
                android:padding="30dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view_in_cardview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/image_two"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/property_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="116dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/open_sans_extra_bold"
                        android:text="@string/sky_bar"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/view_in_cardview2" />

                    <RatingBar
                        android:id="@+id/ratingBar2"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="13dp"
                        android:max="5"
                        android:numStars="5"
                        android:progressTint="@color/yellow"
                        android:rating="4.5"
                        android:stepSize="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/property_title" />

                    <TextView
                        android:id="@+id/rating2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/_4_70"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/ratingBar2"
                        app:layout_constraintTop_toTopOf="@+id/ratingBar2" />

                    <TextView
                        android:id="@+id/visitors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/_470"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/rating2"
                        app:layout_constraintTop_toTopOf="@+id/rating2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="235dp"
                android:padding="30dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view_in_cardview3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/image_three"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/property_title2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="116dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/open_sans_extra_bold"
                        android:text="@string/boulevard"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/view_in_cardview3" />

                    <RatingBar
                        android:id="@+id/ratingBar3"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="13dp"
                        android:max="5"
                        android:numStars="5"
                        android:progressTint="@color/yellow"
                        android:rating="4.5"
                        android:stepSize="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/property_title2" />

                    <TextView
                        android:id="@+id/rating3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/_4_80"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/ratingBar3"
                        app:layout_constraintTop_toTopOf="@+id/ratingBar3" />

                    <TextView
                        android:id="@+id/visitors2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/_602"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/rating3"
                        app:layout_constraintTop_toTopOf="@+id/rating3" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>